<resources>
    <string name="app_name">Tichu Score Keeper</string>
    <string name="action_settings">Settings</string>

    <string name="hand_label">Hand </string>
    <string name="team_1_points_header">TEAM 1 :</string>
    <string name="team_2_points_header">TEAM 2 :</string>
    <string name="one_two_bonus_label">One-Two</string>
    <string name="finished_button_label">Finish Hand</string>
    <string name="new_game_button_label">New Game</string>
    <string name="reset_button_label">Reset Hand</string>
    <string name="undo_last_hand_button_label">Undo Last Hand</string>

    <string name="tichus_fail_label">FAIL</string>
    <string name="tichus_success_label">SUCCESS</string>

    <string name="tichu_label">TICHU</string>
    <string name="grand_tichu_label">GRAND TICHU</string>
    <string name="imperial_tichu_label">IMPERIAL TICHU</string>

    <string name="pick_player_header">Pick Your Player</string>
</resources>
